# reaction-roles

./: Cargo.toml
src/: add.rs  error.rs  lib.rs  reaction_role_manager.rs  reaction_role_row.rs  reaction_role_schema.rs  reaction_role_table.rs  reaction_roles_manager.rs  remove.rs  utils.rs
src/command/: add.rs  mod.rs  remove.rs
src/reaction/: mod.rs
