[package]
name = "reaction-roles"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "*", default-features = false, features = ["any", "macros"] }


[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
# version = "*"
default-features = false
features = ["rustls_backend", "builder", "client", "gateway", "model"]
